test_programs/compile_failure/noirc_frontend_tests_only_one_private_error_when_name_in_types_and_values_namespace_collides/src/main.nr

    mod moo {
        struct foo {}

        fn foo() {}
    }

    fn main() {
        let _ = moo::foo {};
        x
    }
    